Tweak layout and fix z-index issue

--- a/invest-easy/src/app/app.component.scss
+++ b/invest-easy/src/app/app.component.scss
@@ -1,14 +1,37 @@
-.bottom-nav {
+.app-container {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+}
+
+.app-header-nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 4rem;
+}
+
+.app-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding-top: 4rem; /* matches header height */
+  padding-bottom: 4rem; /* matches footer height */
+  overflow-y: auto;
+}
+
+.app-bottom-nav {
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 56px;
+  height: 4rem;
   background: var(--background-color);
   display: flex;
   justify-content: space-around;
   box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
-  z-index: 100;
+  z-index: 0;
 
   a {
     display: flex;
@@ -36,4 +59,3 @@
     }
   }
 }
-
