--- a/invest-easy/src/app/home/home.component.scss
+++ b/invest-easy/src/app/home/home.component.scss
@@ -24,12 +24,12 @@
   position: absolute;
   top: 5px;
   right: 5px;
-  z-index: 1;
+  // z-index: 0;
 }
 
 
 .news-section {
-  margin: 2rem 0;
+  // margin: 2rem 0;
 
   h2 {
     margin-bottom: 1rem;
@@ -38,14 +38,11 @@
 
   .news-list {
     list-style-type: none;
-    padding: 0;
-    margin: 0;
+    padding: 1rem;
 
   .news-card {
-    margin-bottom: 1rem;
 
     mat-card-header {
-      margin-bottom: 0.5rem;
     }
 
     mat-card-subtitle {
